Readme file. Files with example settings.