@@ -36,7 +36,6 @@
             <version>1.2</version>
             <scope>compile</scope>
         </dependency>
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -61,41 +60,24 @@
             <version>2.19.0</version>
             <scope>compile</scope>
         </dependency>
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.30</version>
             <scope>compile</scope>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>org.mockito</groupId>-->
-<!--            <artifactId>mockito-all</artifactId>-->
-<!--            <version>1.10.19</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
-
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>org.powermock.tests</groupId>-->
-<!--            <artifactId>powermock-tests-utils</artifactId>-->
-<!--            <version>1.6.6</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
@@ -123,58 +105,18 @@
             <artifactId>powermock-reflect</artifactId>
             <version>2.0.9</version>
         </dependency>
-
-
-<!--        <dependency>-->
-<!--            <groupId>org.powermock</groupId>-->
-<!--            <artifactId>powermock-module-junit4</artifactId>-->
-<!--            <version>2.0.9</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>org.powermock</groupId>-->
-<!--            <artifactId>powermock-module-testng</artifactId>-->
-<!--            <version>2.0.9</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-
-        <!--        <dependency>-->
-        <!--            <groupId>javax.activation</groupId>-->
-        <!--            <artifactId>activation</artifactId>-->
-        <!--            <version>1.1.1</version>-->
-        <!--        </dependency>-->
-
-
-        <!--        <dependency>-->
-        <!--            <groupId>com.google.code.gson</groupId>-->
-        <!--            <artifactId>gson</artifactId>-->
-        <!--            <version>2.9.1</version>-->
-        <!--            <scope>compile</scope>-->
-        <!--        </dependency>-->
-
-        <!--        <dependency>-->
-        <!--            <groupId>commons-codec</groupId>-->
-        <!--            <artifactId>commons-codec</artifactId>-->
-        <!--            <version>1.15</version>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
-
         <dependency>
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
             <version>1.4.7</version>
             <scope>compile</scope>
         </dependency>
-
-
-
     </dependencies>
 
     <build>
@@ -205,20 +147,6 @@
                 </configuration>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-jar-plugin</artifactId>-->
-<!--                <version>3.2.2</version>-->
-<!--                <configuration>-->
-<!--                    <archive>-->
-<!--                        <manifestEntries>-->
-<!--                            <Add-Opens>java.base/java.util</Add-Opens>-->
-<!--&lt;!&ndash;                            <Add-Opens>java.util/java.util.Properties</Add-Opens>&ndash;&gt;-->
-<!--                        </manifestEntries>-->
-<!--                    </archive>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -233,18 +161,17 @@
                         --add-opens java.base/jdk.internal=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                         --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+                        --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
                         --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
                         --add-exports java.base/jdk.internal=ALL-UNNAMED
-<!--                        &#45;&#45;add-exports java.base/jdk.internal.misc=ALL-UNNAMED-->
-<!--                        &#45;&#45;add-exports java.base/jdk.internal.loader=ALL-UNNAMED-->
                     </argLine>
                     <systemPropertyVariables>
                         <logPath>
-                            D:\Projects\Java\EPAM\railway.itermit.com\target\railway.itermit.com-2.0-SNAPSHOT\logs
+                            railway.itermit.com\target\railway.itermit.com-2.0-SNAPSHOT\logs
                         </logPath>
                     </systemPropertyVariables>
                     <environmentVariables>
-                        <!-- <logPath>D:\Projects\Java\EPAM\railway.itermit.com\target\railway.itermit.com-2.0-SNAPSHOT\logs</logPath>-->
+                        <!-- <logPath>railway.itermit.com\target\railway.itermit.com-2.0-SNAPSHOT\logs</logPath>-->
                     </environmentVariables>
                 </configuration>
             </plugin>
